agrego funciones de estadisticas

--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Estadisticas\frmEstadisticas.Designer.cs">
       <DependentUpon>frmEstadisticas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Estadisticas\Modelo\Estadistica.cs" />
+    <Compile Include="Estadisticas\Modelo\Estadisticas.cs" />
     <Compile Include="GenerarModificacionReserva\frmMotivoCancelacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -262,12 +264,6 @@
     </Compile>
     <Compile Include="GenerarModificacionReserva\FormGenerarModificarReserva.Designer.cs">
       <DependentUpon>FormGenerarModificarReserva.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ListadoEstadistico\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ListadoEstadistico\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\frmLogin.cs">
       <SubType>Form</SubType>
