Fixes varios despues de QA

--- a/FrbaHotel/App.config
+++ b/FrbaHotel/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=gdHotel2018;Password=gd2018"
+        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=gdHotel2018;Password=gdhotel2018"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
