--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -47,6 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbmUsuarios\BuscarUsuarios.cs" />
+    <Compile Include="AbmUsuarios\Usuario.cs" />
+    <Compile Include="AbmUsuarios\Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmUsuarios\Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Clientes\frmClientesFicha.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -316,6 +324,9 @@
     <Compile Include="Tools\RegexUtilities.cs" />
     <Compile Include="Tools\Option.cs" />
     <Compile Include="Tools\Sesion.cs" />
+    <EmbeddedResource Include="AbmUsuarios\Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Clientes\frmClientesFicha.resx">
       <DependentUpon>frmClientesFicha.cs</DependentUpon>
     </EmbeddedResource>
