--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -401,6 +401,9 @@
     <EmbeddedResource Include="Reservas\ConfirmarReserva.resx">
       <DependentUpon>ConfirmarReserva.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reservas\FormSeleccionarHabitaciones.resx">
+      <DependentUpon>FormSeleccionarHabitaciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reservas\frmMotivoCancelacion.resx">
       <DependentUpon>frmMotivoCancelacion.cs</DependentUpon>
     </EmbeddedResource>
