Factura: ya carga listado y carga cabecera factura

--- a/FrbaHotel/App.config
+++ b/FrbaHotel/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=gdHotel2018;Password=gd2018"
+        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=gdHotel2018;Password=gdhotel2018"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -11,6 +11,6 @@
     </startup>
   <appSettings>
     <add key="formatoFechaSistema" value="en-US" />
-    <add key="fechaSistema" value="07-09-2018" />
+    <add key="fechaSistema" value="08-29-2018" />
   </appSettings>
 </configuration>
