--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -185,11 +185,17 @@
     </Compile>
     <Compile Include="Estadisticas\Modelo\Estadistica.cs" />
     <Compile Include="Estadisticas\Modelo\Estadisticas.cs" />
-    <Compile Include="Facturar\Facturacion.cs">
+    <Compile Include="Facturar\frmFacturasFicha.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Facturar\Facturacion.Designer.cs">
-      <DependentUpon>Facturacion.cs</DependentUpon>
+    <Compile Include="Facturar\frmFacturasFicha.Designer.cs" >
+      <DependentUpon>frmFacturasFicha.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Facturar\frmFacturasListado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Facturar\frmFacturasListado.Designer.cs">
+      <DependentUpon>frmFacturasListado.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\frmSeleccionHotel.cs">
       <SubType>Form</SubType>
@@ -213,6 +219,7 @@
     <Compile Include="Login\Modelo\UsuarioRol.cs" />
     <Compile Include="Login\Modelo\Usuarios.cs" />
     <Compile Include="Login\Modelo\UsuariosRoles.cs" />
+    <Compile Include="Modelo\Estadias.cs" />
     <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="RegistrarConsumible\Consumo.cs" />
     <Compile Include="RegistrarConsumible\GeneradorConsumo.cs" />
@@ -404,8 +411,11 @@
     <EmbeddedResource Include="Estadisticas\frmEstadisticas.resx">
       <DependentUpon>frmEstadisticas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Facturar\Facturacion.resx">
-      <DependentUpon>Facturacion.cs</DependentUpon>
+    <EmbeddedResource Include="Facturar\frmFacturasFicha.resx" >
+      <DependentUpon>frmFacturasFicha.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Facturar\frmFacturasListado.resx" >
+      <DependentUpon>frmFacturasListado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
