--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -47,6 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbmHotel\CargarRegimenesHotelBuscador.cs" />
+    <Compile Include="AbmHotel\EditarRegimenes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmHotel\EditarRegimenes.Designer.cs">
+      <DependentUpon>EditarRegimenes.cs</DependentUpon>
+    </Compile>
     <Compile Include="AbmUsuarios\AgregarUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +69,13 @@
     <Compile Include="AbmUsuarios\ElegirRoles.Designer.cs">
       <DependentUpon>ElegirRoles.cs</DependentUpon>
     </Compile>
+    <Compile Include="AbmUsuarios\ModificarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AbmUsuarios\ModificarUsuario.Designer.cs">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AbmUsuarios\ModificarUsuarioObject.cs" />
     <Compile Include="AbmUsuarios\Usuario.cs" />
     <Compile Include="AbmUsuarios\Usuarios.cs">
       <SubType>Form</SubType>
@@ -338,11 +352,17 @@
     <Compile Include="Tools\RegexUtilities.cs" />
     <Compile Include="Tools\Option.cs" />
     <Compile Include="Tools\Sesion.cs" />
+    <EmbeddedResource Include="AbmHotel\EditarRegimenes.resx">
+      <DependentUpon>EditarRegimenes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AbmUsuarios\AgregarUsuario.resx">
       <DependentUpon>AgregarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmUsuarios\ElegirRoles.resx">
       <DependentUpon>ElegirRoles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmUsuarios\ModificarUsuario.resx">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmUsuarios\Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
