--- a/FrbaHotel/FrbaHotel.csproj
+++ b/FrbaHotel/FrbaHotel.csproj
@@ -188,7 +188,7 @@
     <Compile Include="Facturar\frmFacturasFicha.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Facturar\frmFacturasFicha.Designer.cs" >
+    <Compile Include="Facturar\frmFacturasFicha.Designer.cs">
       <DependentUpon>frmFacturasFicha.cs</DependentUpon>
     </Compile>
     <Compile Include="Facturar\frmFacturasListado.cs">
@@ -220,6 +220,8 @@
     <Compile Include="Login\Modelo\Usuarios.cs" />
     <Compile Include="Login\Modelo\UsuariosRoles.cs" />
     <Compile Include="Modelo\Estadias.cs" />
+    <Compile Include="Modelo\Facturas.cs" />
+    <Compile Include="Modelo\FormasPago.cs" />
     <Compile Include="Modelo\Usuario.cs" />
     <Compile Include="RegistrarConsumible\Consumo.cs" />
     <Compile Include="RegistrarConsumible\GeneradorConsumo.cs" />
@@ -411,10 +413,10 @@
     <EmbeddedResource Include="Estadisticas\frmEstadisticas.resx">
       <DependentUpon>frmEstadisticas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Facturar\frmFacturasFicha.resx" >
+    <EmbeddedResource Include="Facturar\frmFacturasFicha.resx">
       <DependentUpon>frmFacturasFicha.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Facturar\frmFacturasListado.resx" >
+    <EmbeddedResource Include="Facturar\frmFacturasListado.resx">
       <DependentUpon>frmFacturasListado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\frmLogin.resx">
