--- a/FrbaHotel/App.config
+++ b/FrbaHotel/App.config
@@ -3,14 +3,14 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=gdHotel2018;Password=gdhotel2018"
+        <add name="FrbaHotel.Properties.Settings.Setting" connectionString="Data Source=LOCALHOST\SQLSERVER2012;Initial Catalog=GD1C2018;User ID=sa;Password=gd2018"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="formatoFechaSistema" value="en-US" />
-    <add key="fechaSistema" value="08-20-2018" />
+    <add key="formatoFechaSistema" value="yyyy-MM-dd" />
+    <add key="fechaSistema" value="2018-08-20" />
   </appSettings>
 </configuration>
